--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@ Hello everyone
 </head>
 <body>
 Hello everyone, How are you?
-I am ALberto Sebastian
+I am Alberto Sebastian
 https://github.com/Albertoseban
-
+<br>
 Follow me on Facebook : facebook.com/albertoseban
+<br>
 Twitter: twitter.com/albertoseban
+<br>
 google+ : https://plus.google.com/u/0/+AlbertoSebastiank/posts
+<br>
 </body>
 </html>
