--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ Hello everyone
 </head>
 <body>
 Hello everyone, How are you?
-I am Alberto Sebastian
-https://github.com/Albertoseban
-<br>
-Follow me on Facebook : facebook.com/albertoseban
-<br>
-Twitter: twitter.com/albertoseban
-<br>
-google+ : https://plus.google.com/u/0/+AlbertoSebastiank/posts
-<br>
+I am <a Alberto Sebastian
+href="  https://github.com/Albertoseban"></a>
+<br><br><br>
+<a Follow me on Facebook : href="facebook.com/albertoseban"></a>
+<br><br><br>
+<a Twitter: href="twitter.com/albertoseban"></a>
+<br><br><br>
+<a google+ : href= "https://plus.google.com/u/0/+AlbertoSebastiank/posts"></a>
+<br><br><br>
 </body>
 </html>
