--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ Hello everyone
 </head>
 <body>
 Hello everyone, How are you?
-I am <a Alberto Sebastian
-href="  https://github.com/Albertoseban"></a>
+I am <a href="https://github.com/Albertoseban"> Alberto Sebastian
+</a>
 <br><br><br>
-<a Follow me on Facebook : href="facebook.com/albertoseban"></a>
+<a href="facebook.com/albertoseban" >Follow me on Facebook></a>
 <br><br><br>
-<a Twitter: href="twitter.com/albertoseban"></a>
+<a href="twitter.com/albertoseban"> Twitter: </a>
 <br><br><br>
-<a google+ : href= "https://plus.google.com/u/0/+AlbertoSebastiank/posts"></a>
+<a href="https://plus.google.com/u/0/+AlbertoSebastiank/posts">  google+ : </a>
 <br><br><br>
 </body>
 </html>
