--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ Hello everyone
 </title>
 </head>
 <body>
-Hello everyone, How are you?
+Hello everyone, How are you?<br><br><br>
 I am <a href="https://github.com/Albertoseban"> Alberto Sebastian
 </a>
 <br><br><br>
-<a href="facebook.com/albertoseban" >Follow me on Facebook></a>
+<a href="https://facebook.com/albertoseban" >Follow me on Facebook></a>
 <br><br><br>
-<a href="twitter.com/albertoseban"> Twitter: </a>
+<a href="https://twitter.com/albertoseban"> Twitter: </a>
 <br><br><br>
 <a href="https://plus.google.com/u/0/+AlbertoSebastiank/posts">  google+ : </a>
 <br><br><br>
