--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Hello everyone
 </head>
 <body>
 Hello everyone, How are you?<br><br><br>
-I am <a href="https://github.com/Albertoseban"> Alberto Sebastian
+I am <a href="https://github.com/Albertoseban"><h1> Alberto Sebastian</h1>
 </a>
 <br><br><br>
 <a href="https://facebook.com/albertoseban" >Follow me on Facebook></a>
