--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Hello everyone, How are you?<br><br><br>
 I am <a href="https://github.com/Albertoseban"><h1> Alberto Sebastian</h1>
 </a>
 <br><br><br>
-<a href="https://facebook.com/albertoseban" >Follow me on Facebook></a>
+<a href="https://facebook.com/albertoseban" >Follow me on Facebook</a>
 <br><br><br>
 <a href="https://twitter.com/albertoseban"> Twitter: </a>
 <br><br><br>
